# blip

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.abacusai/: config.json
.github/workflows/: docker-publish-dev.yml  docker-publish.yml
app/: main.py
app/clients/: radarr_client.py  tmdb_client.py
app/core/: config.py  database.py
app/models/: cache.py  settings.py
app/schemas/: movie.py  radarr.py  settings.py
app/services/: cache_service.py  movie_service.py  radarr_service.py  settings_service.py
app/static/: app.css  app.js
app/templates/: base.html  index.html  settings.html
app/templates/partials/: _cards.html  _load_more.html  _movie_actions.html  list_tabs.html  movie_add_modal.html  movie_append.html  movie_card.html  movie_grid.html  movie_modal.html  settings_radarr_options.html
app/web/: routes.py  settings_routes.py
docs/: ARCHIVE.md  ARCHIVES.md  DECISIONS.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  PRD.md
tests/: test_add_movie.py  test_cache_service.py  test_health.py  test_movie_detail.py  test_movie_lists.py  test_radarr_status.py  test_responsive_nav.py  test_search.py  test_settings_routes.py  test_settings_service.py  test_tmdb_mapping.py
